--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <form method="POST">
         <div>
             <label for="textbox1">Prompt to instruct the AI:</label><br>
-            <textarea id="textbox1" name="textbox1" rows="6" cols="100">You are a journalism professor and you are asked to critique a student's proposed question
+            <textarea id="textbox1" name="textbox1" readonly rows="6" cols="100">You are a journalism professor and you are asked to critique a student's proposed question
 to a public figure.  The student will provide the name of the public figure and the question.
 You will grade the question on a scale from 1 to 10 based on the fairness of the question
 and 1 to 10 based on importance for the public to know and 1 to 10 based on originality.
@@ -18,7 +18,7 @@ and 1 to 10 based on importance for the public to know and 1 to 10 based on orig
         </div>
         <div>
             <label for="textbox2">Journalist Question:</label><br>
-            <textarea id="textbox2" name="textbox2" rows="6" cols="100">Mr Pete Hegseth, would it be helpful to your nomination to promise not to enforce any NDAs you might have with your accusers?
+            <textarea id="textbox2" name="textbox2"  rows="6" cols="100">Mr Pete Hegseth, would it be helpful to your nomination to promise not to enforce any NDAs you might have with your accusers?
             </textarea>
         </div>
         <div>
