improve initial state of texareas

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,7 @@ and 1 to 10 based on importance for the public to know and 1 to 10 based on orig
         </div>
         <div>
             <label for="textbox2">Journalist Question:</label><br>
-            <textarea id="textbox2" name="textbox2"  rows="6" cols="100">Mr Pete Hegseth, would it be helpful to your nomination to promise not to enforce any NDAs you might have with your accusers?
-            </textarea>
+            <textarea id="textbox2" name="textbox2" rows="6" cols="100">{{ saved_text }}</textarea>
         </div>
         <div>
             <button type="submit">Submit</button>
